--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(to right, #ff5f6d, #ffc371);
+  background: —-webkit-linear-gradient(to right, #ff5f6d, #ffc371);
 }
 
 code {
